login성공, 리스트보기 성공

--- a/WebContent/WEB-INF/command.properties
+++ b/WebContent/WEB-INF/command.properties
@@ -4,3 +4,4 @@ customerJoinForm.do=service.CustomerJoinForm
 listProduct.do=service.ListProductAction
 listShop.do=service.ListShopAction
 menu-newhotForm.do=service.MenuNewhotForm
+login.do=service.Login
