--- a/WebContent/WEB-INF/command.properties
+++ b/WebContent/WEB-INF/command.properties
@@ -5,3 +5,4 @@ listProduct.do=service.ListProductAction
 listShop.do=service.ListShopAction
 menu-newhotForm.do=service.MenuNewhotForm
 login.do=service.Login
+logout.do=service.Logout
