--- a/WebContent/WEB-INF/command.properties
+++ b/WebContent/WEB-INF/command.properties
@@ -6,3 +6,5 @@ listShop.do=service.ListShopAction
 menu-newhotForm.do=service.MenuNewhotForm
 login.do=service.Login
 logout.do=service.Logout
+customerUpdateForm.do=service.CustomerUpdateForm
+#customerUpdate.do=service.CustomerUpdate
